width correctif on smaller slideshow img

--- a/src/Style/index.scss
+++ b/src/Style/index.scss
@@ -13,6 +13,7 @@ html {
 }
 body {
   max-width: 1600px;
+  width: 100%;
   margin: 0px 0px 125px 0px;
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -25,7 +26,8 @@ body {
 }
 
 #root {
-  margin: 0px 60px 0px 60px;
+  padding: 0;
+  box-sizing: border-box;
 
   @media (min-width: 320px) and (max-width: 650px) {
     margin: 0px 20px 0px 20px;
