--- a/src/Style/pages/page_not_found.scss
+++ b/src/Style/pages/page_not_found.scss
@@ -1,8 +1,10 @@
 .page-not-found {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px;
+  padding: 50px 0 50px 0;
+  box-sizing:content-box;
 
   span {
     color: #ff6060;
